--- a/index.html
+++ b/index.html
@@ -25,49 +25,27 @@
     <header class="header">
 
         <nav class="navbar">
-            <a href="#home"><span class="icon"><i class="fa-solid fa-house"></i></span> Inicio</a>
-            <a href="#about"><span class="icon"><i class="fa-solid fa-arrow-right-long"></i></span>Sobre nosotros</a>
-            <a href="#menu"><span class="icon"><i class="fa-solid fa-list"></i></span>Servicios</a>
-            <a href="#products"><span class="icon"><i class="fa-solid fa-check"></i></span>Productos</a>
-            <a href="#review"><span class="icon"><i class="fa-solid fa-star"></i></span>Reviews</a>
-            <a href="#contact"><span class="icon"><i class="fa-solid fa-user"></i></span>Contacto</a>
+            <a href="#home"> Inicio</a>
+            <a href="#about">Sobre nosotros</a>
+            <a href="#menu"></span>Servicios</a>
+            <a href="#products">Productos</a>
+            <a href="#review">Reviews</a>
+            <a href="#contact">Contacto</a>
         </nav>
 
         <div class="icons">
-            <div class="fas fa-search" id="search-btn"></div>
             <div class="fas fa-shopping-cart" id="cart-btn"></div>
             <div class="fas fa-bars" id="menu-btn"></div>
         </div>
 
-        <div class="search-form">
-            <input type="search" id="search-box" placeholder="">
-            <label for="search-box" class="fas fa-search"></label>
-        </div>
-
-        <div class="cart-items-container">
-            
-            <a href="#" class="btn">Continuar con la compra</a>
-            <a href="#" class="btn">Vaciar carrito</a>
-        </div>
     </header>
     <!--header section ends-->
     <div class="container-slider">
-        <div class="slider" id="slider">
+        <div class="slider">
             <div class="slider__section">
                 <img src="/images/banner P.jpg" alt="" class="slider__img" >
             </div>
-            <div class="slider__section">
-                <img src="/images/banner2.jpeg" alt="" class="slider__img" >
-            </div>
-            <div class="slider__section">
-                <img src="/images/banner3.jpeg" alt="" class="slider__img" >
-            </div>
-            <div class="slider__section">
-                <img src="/images/banner4.jpeg" alt="" class="slider__img" >
-            </div>
         </div>
-        <div class="slider__btn slider__btn--right" id="btn-right">&#62</div>
-        <div class="slider__btn slider__btn--left" id="btn-left">&#60</div>
     </div>
     <!-- home section starts -->
     <section class="home" id="home">
@@ -111,7 +89,7 @@
             <div class="box">
                 <img src="/images/productos3.png" alt="">
                 <h3>Limpiezas</h3>
-                <a href="install.html" class="btn">Solicitar Información</a>
+                <a href="install.html" class="btn" id="boton_solicitar">Solicitar Información</a>
             </div>
         </div>
     </section>    
@@ -172,12 +150,7 @@
                 </div>
             </div>
             </div>
-        </div>
     </section>
-    <div class="imagen-light">
-        <img src="/images/close.svg" alt="" class="close">
-        <img src="" alt="" class="agregar-imagen">
-    </div>
     <!-- products section ends -->
 
     <!-- review section starts -->
