--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body>
     <div class="logo-container">
@@ -35,7 +36,6 @@
 
         <div class="icons">
             <div class="fas fa-shopping-cart" id="cart-btn"></div>
-            <div class="fas fa-bars" id="menu-btn"></div>
         </div>
 
     </header>
@@ -81,12 +81,12 @@
     <section class="menu" id="menu">
         <h1 class="heading"> Nuestros <span>Servicios</span> </h1>
         <div class="box-container">  
-            <div class="box">
+            <div data-aos="fade-right" data-aos-duration="2000" class="box">
                 <img src="/images/productos2.png" alt="">
                 <h3>Instalación y mantenimiento</h3>
                 <a href="install.html" class="btn">Solicitar Información</a>
             </div>
-            <div class="box">
+            <div data-aos="fade-left"  data-aos-duration="2000" class="box">
                 <img src="/images/productos3.png" alt="">
                 <h3>Limpiezas</h3>
                 <a href="install.html" class="btn" id="boton_solicitar">Solicitar Información</a>
@@ -146,7 +146,7 @@
             </div>
             <div class="box1">
                 <div class="content">
-                    <a href="venta.html" class="btn">Ver más</a>
+                    <a href="./pages/venta.html" class="btn">Ver más</a>
                 </div>
             </div>
             </div>
@@ -256,7 +256,9 @@
         <div class="credit">Creado por <span>Santiago Serrato</span> | todos los derechos reservados</div>
     </section>
     <!-- footer section ends -->
-    <script src="js/script.js"></script>
-    <script src="/slider.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+      </script>
 </body>
 </html>
