--- a/pages/install.html
+++ b/pages/install.html
@@ -6,13 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <meta description=""> -->
     <title>Clima Service</title>
-    <link rel="stylesheet" href="install.css">
+    <link rel="stylesheet" href="/css/style.css">
     <!--Font awesome cdn link-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <!-- fuente oswald -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body>
     <div class="logo-container">
@@ -25,28 +26,18 @@
     <header class="header">
 
         <nav class="navbar">
-            <a href="index.html"><span class="icon"><i class="fa-solid fa-house"></i></span> Inicio</a>
-            <a href="about.html"><span class="icon"><i class="fa-solid fa-arrow-right-long"></i></span>Sobre nosotros</a>
-            <a href="#home"><span class="icon"><i class="fa-solid fa-list"></i></span>Servicios</a>
-            <a href="venta.html"><span class="icon"><i class="fa-solid fa-check"></i></span>Productos</a>
-            <a href="contact.html"><span class="icon"><i class="fa-solid fa-user"></i></span>Contacto</a>
+            <a href="#home"> Inicio</a>
+            <a href="#about">Sobre nosotros</a>
+            <a href="#menu"></span>Servicios</a>
+            <a href="#products">Productos</a>
+            <a href="#review">Reviews</a>
+            <a href="#contact">Contacto</a>
         </nav>
 
         <div class="icons">
-            <div class="fas fa-search" id="search-btn"></div>
             <div class="fas fa-shopping-cart" id="cart-btn"></div>
-            <div class="fas fa-bars" id="menu-btn"></div>
         </div>
 
-        <div class="search-form">
-            <input type="search" id="search-box" placeholder="">
-            <label for="search-box" class="fas fa-search"></label>
-        </div>
-        <div class="cart-items-container">
-            
-            <a href="#" class="btn">Continuar con la compra</a>
-            <a href="#" class="btn">Vaciar carrito</a>
-        </div>
     </header>
     <!--header section ends-->
 
