--- a/pages/about.html
+++ b/pages/about.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <meta description=""> -->
     <title>Clima Service</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <!--Font awesome cdn link-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <!-- fuente oswald -->
@@ -18,7 +18,7 @@
 <body>
     <div class="logo-container">
     <div class="logo">
-        <a href="#home" class="logo"><img src="/images/Logo clima service.png" alt="">
+        <a href="#home" class="logo"><img src="images/Logoclimaservice.png" alt="">
         </a>
     </div>
 </div>
@@ -48,7 +48,7 @@
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo nisi veniam perferendis, eligendi temporibus excepturi ipsum aut doloribus consequatur, fugiat labore quidem unde culpa quia exercitationem atque itaque animi similique tempore quasi delectus eaque repellendus maiores? Ipsum, in quisquam repudiandae reprehenderit cumque velit dicta maiores nemo voluptas officiis eveniet reiciendis incidunt itaque fuga possimus aliquid libero nihil at excepturi minus dolorem accusantium nostrum ex. Consequuntur voluptates voluptatem, officia consequatur ipsum incidunt sequi a ipsa saepe autem distinctio nemo dolore nesciunt voluptatum, vero non est deleniti impedit, corrupti error obcaecati expedita! Illo fugiat aut alias eius sit. Officia, quia. Repellat, reiciendis?Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cum modi esse veniam itaque dignissimos velit necessitatibus voluptatem quae, qui officiis, libero possimus deserunt quibusdam dolore. Voluptas exercitationem voluptatem placeat, veritatis odit ea, officia repudiandae, cupiditate minima provident saepe odio nostrum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero architecto, consectetur, eos perferendis accusamus quas velit facilis rem nemo repudiandae optio quam nostrum. Aliquid sit ipsum eum delectus magni harum, cupiditate repellendus qui dolorem sunt nam dolorum nihil repellat ipsa perferendis temporibus, nemo deleniti molestias obcaecati maiores voluptatem, sequi iure. Enim totam temporibus saepe dolorum hic consectetur placeat esse non fugit corporis commodi nam quisquam magni odio vel quidem distinctio excepturi exercitationem necessitatibus sit repellat iure, quae doloremque pariatur! Et voluptatem consequuntur dolorum officia veritatis quae odio, at debitis esse eos dignissimos repudiandae. Mollitia unde, nisi nulla eos esse soluta!
         </p>
         <div class="img">
-            <img class="img__container" src="/images/prueba.jpg" alt="">
+            <img class="img__container" src="images/prueba.jpg" alt="">
         </div>
     </div>
         <!--section ends-->
@@ -58,10 +58,10 @@
         <div class="share">
             <a href="#" class="fab fa-facebook"></a>
             <a href="#" class="wp">
-                <img class="wp__1" src="/images/wallapop-app.png" alt="">
+                <img class="wp__1" src="images/wallapop-app.png" alt="">
             </a>
             <a href="#" class="wp">
-                <img class="wp__2" src="/images/malogo.png" alt="">
+                <img class="wp__2" src="images/malogo.png" alt="">
             </a>
         </div>
         <div class="links">
@@ -75,6 +75,4 @@
         <div class="credit">Creado por <span>Santiago Serrato</span> | todos los derechos reservados</div>
     </section>
     <!-- footer section ends -->
-
-    <script src="/js/script.js"></script>
 </body>
