--- a/pages/install.html
+++ b/pages/install.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <meta description=""> -->
     <title>Clima Service</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <!--Font awesome cdn link-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <!-- fuente oswald -->
@@ -18,7 +18,7 @@
 <body>
     <div class="logo-container">
     <div class="logo">
-        <a href="#home" class="logo"><img src="/images/Logo clima service.png" alt="">
+        <a href="#home" class="logo"><img src="images/Logoclimaservice.png" alt="">
         </a>
     </div>
 </div>
@@ -46,7 +46,7 @@
         <div class="card">
             <div class="face face1">
                 <div class="content">
-                    <img src="/images/productos1.jpeg" alt="">
+                    <img src="images/productos1.jpeg" alt="">
                     <h3>Instalación y mantenimiento</h3>
                 </div>
             </div>
@@ -60,7 +60,7 @@
         <div class="card">
             <div class="face face1">
                 <div class="content">
-                    <img src="/images/productos2.png" alt="">
+                    <img src="images/productos2.png" alt="">
                     <h3>Limpiezas</h3>
                 </div>
             </div>
@@ -80,10 +80,10 @@
         <div class="share">
             <a href="#" class="fab fa-facebook"></a>
             <a href="#" class="wp">
-                <img class="wp__1" src="/images/wallapop-app.png" alt="">
+                <img class="wp__1" src="images/wallapop-app.png" alt="">
             </a>
             <a href="#" class="wp">
-                <img class="wp__2" src="/images/malogo.png" alt="">
+                <img class="wp__2" src="images/malogo.png" alt="">
             </a>
         </div>
         <div class="links">
@@ -97,7 +97,5 @@
         <div class="credit">Creado por <span>Santiago Serrato</span> | todos los derechos reservados</div>
     </section>
     <!-- footer section ends -->
-    <script src="js/script.js"></script>
-    <script src="/slider.js"></script>
 </body>
 </html>
