--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <meta description=""> -->
     <title>Clima Service</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <!--Font awesome cdn link-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <!-- fuente oswald -->
@@ -16,14 +16,14 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body>
-    <div class="logo-container">
-    <div class="logo">
-        <a href="#home" class="logo"><img src="/images/Logo clima service.png" alt="">
-        </a>
-    </div>
-</div>
     <!--header section starts-->
     <header class="header">
+        <div class="logo-container">
+        <div class="logo">
+            <a href="#home" class="logo"><img src="images/Logoclimaservice.png" alt="logoEmpresa">
+            </a>
+        </div>
+    </div>
 
         <nav class="navbar">
             <a href="#home"> Inicio</a>
@@ -43,7 +43,7 @@
     <div class="container-slider">
         <div class="slider">
             <div class="slider__section">
-                <img src="/images/banner P.jpg" alt="" class="slider__img" >
+                <img src="images/bannerP.jpg" alt="bannerPrincipal" class="slider__img" >
             </div>
         </div>
     </div>
@@ -65,13 +65,13 @@
 
         <div class="row">
             <div class="image">
-                <img src="/images/sobrenosotros.jpeg" alt="">
+                <img src="images/sobrenosotros.jpeg" alt="aboutImagen">
             </div>
             <div class="content">
                 <h3>Conoce un poco más acerca de quiénes somos</h3>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima consectetur, id vero vel accusantium ipsa eos nobis. Porro ad quis nobis, ducimus assumenda vel corrupti dignissimos nemo architecto provident id!</p>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem facilis labore culpa quisquam, numquam cupiditate fuga earum illo eum quasi!</p>
-                <a href="/about.html" target="_blank" class="btn">Informate más</a>
+                <a href="pages/about.html" target="_blank" class="btn">Informate más</a>
             </div>
         </div>
     </section>
@@ -82,14 +82,14 @@
         <h1 class="heading"> Nuestros <span>Servicios</span> </h1>
         <div class="box-container">  
             <div data-aos="fade-right" data-aos-duration="2000" class="box">
-                <img src="/images/productos2.png" alt="">
+                <img src="images/productos2.png" alt="instalacionEntrada">
                 <h3>Instalación y mantenimiento</h3>
                 <a href="install.html" class="btn">Solicitar Información</a>
             </div>
             <div data-aos="fade-left"  data-aos-duration="2000" class="box">
-                <img src="/images/productos3.png" alt="">
+                <img src="images/productos3.png" alt="limpiezaEntrada">
                 <h3>Limpiezas</h3>
-                <a href="install.html" class="btn" id="boton_solicitar">Solicitar Información</a>
+                <a href="pages/install.html" class="btn" id="boton_solicitar">Solicitar Información</a>
             </div>
         </div>
     </section>    
@@ -101,7 +101,7 @@
         <div class="box-container">
             <div class="box">
                 <div class="image">
-                    <img class="image1" src="/images/productos1.jpeg" alt="">
+                    <img class="image1" src="images/productos1.jpeg" alt="producto1">
                 </div>
                 <div class="content">
                     <h3>Productos nuevos</h3>
@@ -110,7 +110,7 @@
             </div>
             <div class="box">
                 <div class="image">
-                    <img class="image1" src="/images/productos2.png" alt="">
+                    <img class="image1" src="images/productos2.png" alt="producto2">
                 </div>
                 <div class="content">
                     <h3>Productos nuevos</h3>
@@ -119,7 +119,7 @@
             </div>
             <div class="box">
                 <div class="image">
-                    <img class="image1" src="/images/productos2.png" alt="">
+                    <img class="image1" src="images/productos2.png" alt="producto3">
                 </div>
                 <div class="content">
                     <h3>Productos nuevos</h3>
@@ -128,7 +128,7 @@
             </div>
             <div class="box">
                 <div class="image">
-                    <img class="image1" src="/images/productos2.png" alt="">
+                    <img class="image1" src="images/productos2.png" alt="producto4">
                 </div>
                 <div class="content">
                     <h3>Productos nuevos</h3>
@@ -137,7 +137,7 @@
             </div>
             <div class="box">
                 <div class="image">
-                    <img class="image1" src="/images/productos2.png" alt="">
+                    <img class="image1" src="images/productos2.png" alt="producto5">
                 </div>
                 <div class="content">
                     <h3>Productos nuevos</h3>
@@ -146,7 +146,7 @@
             </div>
             <div class="box1">
                 <div class="content">
-                    <a href="./pages/venta.html" class="btn">Ver más</a>
+                    <a href="pages/venta.html" class="btn">Ver más</a>
                 </div>
             </div>
             </div>
@@ -161,9 +161,9 @@
         <div class="box-container">
 
             <div class="box">
-                <img src="/images/quote-img.png" alt="" class="quote">
+                <img src="images/quote-img.png" alt="" class="quote">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, nostrum repellat alias non voluptate iusto exercitationem unde dolores mollitia dolorum.</p>
-                <img src="/images/pic-1.png" class="user" alt="">
+                <img src="images/pic-1.png" class="user" alt="foto1">
                 <h3>Pepito Pérez</h3>
                 <div class="stars">
                     <i class="fas fa-star"></i>
@@ -174,9 +174,9 @@
                 </div>
             </div>
             <div class="box">
-                <img src="/images/quote-img.png" alt="" class="quote">
+                <img src="images/quote-img.png" alt="" class="quote">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, nostrum repellat alias non voluptate iusto exercitationem unde dolores mollitia dolorum.</p>
-                <img src="/images/pic-2.png" class="user" alt="">
+                <img src="images/pic-2.png" class="user" alt="foto2">
                 <h3>Naroha Perea</h3>
                 <div class="stars">
                     <i class="fas fa-star"></i>
@@ -187,9 +187,9 @@
                 </div>
             </div>
             <div class="box">
-                <img src="/images/quote-img.png" alt="" class="quote">
+                <img src="images/quote-img.png" alt="" class="quote">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, nostrum repellat alias non voluptate iusto exercitationem unde dolores mollitia dolorum.</p>
-                <img src="/images/pic-3.png" class="user" alt="">
+                <img src="images/pic-3.png" class="user" alt="foto3">
                 <h3>Santi Serrato</h3>
                 <div class="stars">
                     <i class="fas fa-star"></i>
@@ -239,10 +239,10 @@
         <div class="share">
             <a href="#" class="fab fa-facebook"></a>
             <a href="#" class="wp">
-                <img class="wp__1" src="/images/wallapop-app.png" alt="">
+                <img class="wp__1" src="images/wallapop-app.png" alt="logoWallapop">
             </a>
             <a href="#" class="wp">
-                <img class="wp__2" src="/images/malogo.png" alt="">
+                <img class="wp__2" src="images/malogo.png" alt="logoMilAnuncios">
             </a>
         </div>
         <div class="links">
