--- a/pages/contact.html
+++ b/pages/contact.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <meta description=""> -->
     <title>Clima Service</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <!--Font awesome cdn link-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <!-- fuente oswald -->
@@ -18,7 +18,7 @@
 <body>
     <div class="logo-container">
     <div class="logo">
-        <a href="#home" class="logo"><img src="images/Logoclimaservice.png" alt="">
+        <a href="#home" class="logo"><img src="../images/Logoclimaservice.png" alt="">
         </a>
     </div>
 </div>
@@ -76,10 +76,10 @@
         <div class="share">
             <a href="#" class="fab fa-facebook"></a>
             <a href="#" class="wp">
-                <img class="wp__1" src="images/wallapop-app.png" alt="">
+                <img class="wp__1" src="../images/wallapop-app.png" alt="">
             </a>
             <a href="#" class="wp">
-                <img class="wp__2" src="images/malogo.png" alt="">
+                <img class="wp__2" src="../images/malogo.png" alt="">
             </a>
         </div>
         <div class="links">
